quic/s2n-quic-core/src/recovery/bbr/snapshots/quic__s2n-quic-core__src__recovery__bbr__drain__events__check_drain_done.snap
---
source: quic/s2n-quic-core/src/recovery/bbr/drain.rs
expression: ""
---
BbrStateChanged { path_id: 0, state: Drain }
BbrStateChanged { path_id: 0, state: ProbeBwDown }
